--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -5,7 +5,6 @@
 
 <div class="row">
     <div class="col-md-3">
-
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <div class="row">
@@ -13,7 +12,7 @@
                         <i class="fa fa-medkit fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="EquiposUsuarioCount" class="big">1</div>
+                        <div id="EquiposUsuarioCount" class="big">@Html.DisplayFor(model => model.EquiposFuncionalesCount)</div>
                         <div>Equipos</div>
                     </div>
                 </div>
@@ -26,7 +25,6 @@
                 </div>
             </a>
         </div>
-
     </div>
 
     <div class="col-md-3">
@@ -37,12 +35,12 @@
                         <i class="fa fa-wrench fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="ODTMantenimientoPreventivoCount" class="big"></div>
+                        <div id="ODTMantenimientoPreventivoCount" class="big">@Html.DisplayFor(model => model.CorrectivosCount)</div>
                         <div>Mantenimientos Correctivos</div>
                     </div>
                 </div>
             </div>
-            <a href="#">
+            <a href="@Url.Action("Index", "ODTMantenimientoCorrectivo")">
                 <div class="panel-footer">
                     <span class="pull-left">Ver Urgentes</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -60,12 +58,12 @@
                         <i class="fa fa-calendar fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="ODTMantenimientoPreventivoCount" class="huge"></div>
+                        <div id="ODTMantenimientoPreventivoCount" class="big">@Html.DisplayFor(model => model.PreventivosCount)</div>
                         <div>Mantenimientos Preventivos</div>
                     </div>
                 </div>
             </div>
-            <a href="#">
+            <a href="@Url.Action("Index", "ODTMantenimientoPreventivo")">
                 <div class="panel-footer">
                     <span class="pull-left">Ver Próximas</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -84,7 +82,7 @@
                         <i class="fa fa-gears fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="StockRepuestosCount" class="huge"></div>
+                        <div id="StockRepuestosCount" class="big">@Html.DisplayFor(model => model.RepuestosCount)</div>
                         <div>Repuestos</div>
                     </div>
                 </div>
@@ -102,160 +100,10 @@
 
 </div>
 <!-- BUSCAR EQUIPO -->
-<hr />
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar equipo</div>
+@Html.Partial("_SearchEquipos", Model.searchEquipo)
 
-            <div class="panel-body">
-                <form id="FormBuscarEquipo" method="get" data-nqn-ajax="true" action="@Url.Action("SearchEquipos", "Home")" data-nqn-target="#searchEquipoResults">
-
-                    @Html.AntiForgeryToken()
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label">Nombre Completo</label>
-
-                                <input class="form-control text-box single-line"
-                                       data-umdns-autocomplete-nombre="@Url.Action("AutocompleteNombreUMDNS", "EquiposBase")"
-                                       data-val="true"
-                                       data-val-maxlength="The field Nombre completo must be a string or array type with a maximum length of '255'."
-                                       data-val-maxlength-max="255" data-val-required="The Nombre completo field is required."
-                                       id="buscarNombreCompleto"
-                                       name="buscarNombreCompleto" type="text" value="@Model.NombreCompleto">
-
-                            </div>
-
-                            <div class="form-group">
-                                <label class="control-label">UMDNS</label>
-                                <input class="form-control text-box single-line"
-                                       data-umdns-autocomplete-codigo="@Url.Action("AutocompleteCodigoUMDNS", "EquiposBase")"
-                                       data-val="true"
-                                       data-val-maxlength="The field UMDNS must be a string or array type with a maximum length of '255'."
-                                       data-val-maxlength-max="255" data-val-required="The UMDNS field is required."
-                                       id="buscarUMDNS"
-                                       name="buscarUMDNS" type="text" value="@Model.UMDNS">
-
-
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">Estado</label>
-                                @Html.EnumDropDownListFor(model => model.EstadoEquipo, "Todos", htmlAttributes: new { @class = "form-control" })
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.UbicacionId, "Ubicación", htmlAttributes: new { @class = "control-label" })
-                                @Html.DropDownList("UbicacionId", null, "Todas", htmlAttributes: new { @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.SectorId, "Sector", htmlAttributes: new { @class = "control-label" })
-                                @Html.DropDownList("SectorId", null, "Todas", htmlAttributes: new { @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.NumeroMatricula, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.NumeroMatricula, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <input id="buscarEquipo" type="submit" value="Buscar" class="btn btn-primary" />
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <div class="row">
-                    <div class="col-lg-12">                       
-                       <div id="searchEquipoResults">
-                       </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- BUSCAR ODT -->
-<hr />
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-primary">
-            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo</div>
+@Html.Partial("_SearchODTs", Model.searchOdt)
 
-            <div class="panel-body">
-                <form id="FormBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "Home")" data-nqn-target="#searchODTResults">
-
-                    @Html.AntiForgeryToken()
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label">Nº Referencia</label>
-
-                                <input class="form-control text-box single-line"
-                                       id="buscarNumeroReferencia"
-                                       name="buscarNumeroReferencia" type="text" value="">
-
-                            </div>
-
-                        </div>
-                        <div class="col-md-6">                           
-                            <div class="form-group">
-                                <label class="control-label">Estado</label>
-                                @Html.EnumDropDownListFor(model => model.EstadoODT, "Todos", htmlAttributes: new { @class = "form-control" })
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <input id="buscarODT" type="submit" value="Buscar" class="btn btn-primary" />
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div id="searchODTResults">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<!--
-
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
--->
+<!-- TRASLADAR EQUIPO -->
+@Html.Partial("_TrasladarEquipoModal")
