--- a/EquiposTecnicosSN.Web/Views/EquiposTerapeutica/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposTerapeutica/Create.cshtml
@@ -16,6 +16,6 @@
         </div>
     </div>
     
-    <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+    <a href="@Url.Action("Index", "EquiposBase")" class="btn btn-default"> Volver</a>
     <input type="submit" value="Guardar" class="btn btn-primary" />
 }
