--- a/EquiposTecnicosSN.Web/Views/Indicadores/TiempoMedioReparacion.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Indicadores/TiempoMedioReparacion.cshtml
@@ -1,27 +1,25 @@
 ﻿@{
-    ViewBag.Title = "Indicadores";
+    ViewBag.Title = "Tiempo Medio de Reparación";
 }
 
-<!-- UBICACION Y SECTORES -->
+<div class="row" style="margin-bottom: 20px;">
+
+    <div class="col-lg-1">
+        <label style="margin-top: 5px;">Ubicaci&oacute;n</label>
+    </div>
+    <div class="col-lg-11">
+        @Html.DropDownList("UbicacionId", null, "Todas", htmlAttributes: new { @class = "form-control" })
+    </div>
+
+</div>
 <div class="row" style="margin-bottom: 5px;">
     <div class="col-lg-12">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <a style="text-decoration: none" data-toggle="collapse" data-parent="#accordion" href="#collapseSectores" aria-expanded="true" class="">
-                    <i class="fa fa-hospital-o fa-fw"></i> Ubicaci&oacute;n y Sectores
-                </a>
+                <a style="text-decoration: none" data-toggle="collapse" data-parent="#accordion" href="#collapseSectores" aria-expanded="true" class=""><i class="fa fa-bar-chart fa-fw"></i> Sectores</a>
             </div>
             <div id="collapseSectores" class="panel-collapse collapse" aria-expanded="true">
                 <div class="panel-body">
-                    <div class="row" style="margin-bottom: 20px;">
-                        <div class="col-lg-1">
-                            <label style="margin-top: 5px;">Ubicaci&oacute;n</label>
-                        </div>
-                        <div class="col-lg-11">
-                            @Html.DropDownList("UbicacionId", null, "Todas", htmlAttributes: new { @class = "form-control" })
-                        </div>
-                    </div>
-                    <hr />
                     <input id="seleccionarSectoresToggle" type="button" value="Seleccionar Todos/Ninguno" class="btn btn-default" />
                     <hr />
                     <div id="Sectores" class="row">
@@ -38,34 +36,18 @@
         </div>
     </div>
 </div>
-<!-- GRAFICOS -->
-<div class="row" style="margin-bottom: 5px;">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <i class="fa fa-bar-chart fa-fw"></i> Gr&aacute;ficos
-            </div>
 
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-12" style="margin-bottom: 15px;">
-                        <div class="btn-group btn-group-justified" role="group">
-                            <a href="#" data-nqn-indicador="TMR" id="TMRChart" class="btn btn-info">Tiempo Medio de Reparación</a>
-                            <a href="#" data-nqn-indicador="TMEF" id="TMEFChart" class="btn btn-info">Tiempo Entre Fallas</a>
-                            <a href="#" data-nqn-indicador="TI" id="TIChart" class="btn btn-info">Tiempo de Indisponibilidad</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div id='ParetoChartContainer'></div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
+<div class="row">
+    <div class="col-lg-12" style="margin-bottom: 5px;">
+        <input id="GenerateParetoChart" type="button" value="Generar Gr&aacute;fico de Pareto" class="btn btn-primary" />
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-12">
+        <div id='ParetoChart'></div>
+    </div>
+</div>
+
 @section Scripts {
     <script type="text/javascript">
 
