--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/CreateForEquipo.cshtml
@@ -48,25 +48,17 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>
-                                    @Html.DisplayNameFor(model => model.Odt.FechaInicio)
-                                    @Html.HiddenFor(model => model.Odt.FechaInicio)
-                                </label>
-                                <p class="form-control-static">
-                                    @Html.DisplayFor(model => model.Odt.FechaInicio)
-                                </p>
+                                @Html.LabelFor(model => model.Odt.FechaInicio)
+                                @Html.EditorFor(model => model.Odt.FechaInicio, new { htmlAttributes = new { @class = "form-control date-picker" } })
                             </div>
-
+                                
                             <div class="form-group">
                                 <label>
-                                    &nbsp;
-
                                 </label>
                                 <p class="form-control-static">
                                     &nbsp;
                                 </p>
                             </div>
-
 
                             <div class="form-group">
                                 <label class="control-label switch-label">Prioridad</label>
@@ -105,23 +97,4 @@
             </div>
         </div>
     </div>
-}
-
-@section Scripts {
-    <script type="text/javascript">
-
-        $(function () {
-            $("#EquipoParado").bootstrapSwitch({
-                onColor: "danger",
-                onText: "Si",
-                offText: "No"
-            });
-
-            $("#EquipoParado").on("switchChange.bootstrapSwitch", function (event, state) {
-                if (state) {
-                    $("#Emergencia").click();
-                }
-            });
-        });
-    </script>
 }
