--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model IEnumerable<OrdenDeTrabajoMantenimientoCorrectivo>
+@model IEnumerable<OrdenDeTrabajoMantenimientoPreventivo>
 
 @{
-    ViewBag.Title = "Ordenes de trabajo";
+    ViewBag.Title = "Ordenes de trabajo para Mantenimiento Preventivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> Listado de Ordenes de trabajo Urgentes</div>
+            <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Pr&oacute;ximos</div>
             <div class="panel-body">
 
                 <div class="row">
@@ -23,9 +23,6 @@
                                 </th>
                                 <th>
                                     Fecha de Inicio
-                                </th>
-                                <th>
-                                    Descripci&oacute;n
                                 </th>
                                 <th></th>
                             </tr>
@@ -71,22 +68,19 @@
                                         @Html.DisplayFor(modelItem => item.FechaInicio)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Descripcion)
-                                    </td>
-                                    <td>
                                         <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Edit", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           href="@Url.Action("Edit", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Editar Orden de trabajo">
                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                         </a>
 
                                         <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Details", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           href="@Url.Action("Details", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Ver Orden de trabajo">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                         </a>
                                         <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Delete", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           href="@Url.Action("Delete", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Eliminar Orden de trabajo">
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                                         </a>
