--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label" })
-                    @Html.EnumDropDownListFor(model => model.Estado, htmlAttributes: new { @class = "form-control" })
+                    @Html.EnumDropDownListFor(model => model.Estado, "Seleccione", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
                 </div>
 
