--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
@@ -1,65 +1,78 @@
-﻿@using EquiposTecnicosSN.Web.CustomExtensions
-@model IEnumerable<EquiposTecnicosSN.Entities.Equipos.Equipo>
+﻿@model EquiposTecnicosSN.Web.Models.SearchEquipoViewModel
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar equipo</div>
 
-<hr />
-<table class="table table-striped table-hover table-responsive table-condensed">
-    <thead>
+            <div class="panel-body">
+                <form id="FormBuscarEquipo" method="get" data-nqn-ajax="true" action="@Url.Action("SearchEquipos", "EquiposBase")" data-nqn-target="#searchEquipoResults">
 
-        <tr>
-            <th>
-                Tipo
-            </th>
-            <th>
-                Nombre Completo
-            </th>
-            <th>
-                UMDNS
-            </th>
-            <th>
-                Estado
-            </th>
-            <th>
-                Ubicaci&oacute;n
-            </th>
-            <th>
-                
-            </th>
-        </tr>
-    </thead>
-    <tbody>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="control-label">Nombre Completo</label>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.Tipo().DisplayName()
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NombreCompleto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UMDNS)
-                </td>
-                <td>
-                    @item.Estado.DisplayName()
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Ubicacion.Nombre)
-                </td>
-                <td>
-                    <a class="btn btn-default btn-xs btn-list"
-                       href="@Url.Action("Edit", item.WebController(), new { id = item.EquipoId })"
-                       title="Editar Equipo">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a class="btn btn-default btn-xs btn-list"
-                       href="@Url.Action("Details", item.WebController(), new { id = item.EquipoId })"
-                       title="Ver Equipo">
-                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                    </a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                                <input class="form-control text-box single-line"
+                                       data-umdns-autocomplete-nombre="@Url.Action("AutocompleteNombreUMDNS", "EquiposBase")"
+                                       data-val="true"
+                                       data-val-maxlength="The field Nombre completo must be a string or array type with a maximum length of '255'."
+                                       data-val-maxlength-max="255" data-val-required="The Nombre completo field is required."
+                                       id="buscarNombreCompleto"
+                                       name="buscarNombreCompleto" type="text" value="">
 
+                            </div>
+
+                            <div class="form-group">
+                                <label class="control-label">UMDNS</label>
+                                <input class="form-control text-box single-line"
+                                       data-umdns-autocomplete-codigo="@Url.Action("AutocompleteCodigoUMDNS", "EquiposBase")"
+                                       data-val="true"
+                                       data-val-maxlength="The field UMDNS must be a string or array type with a maximum length of '255'."
+                                       data-val-maxlength-max="255" data-val-required="The UMDNS field is required."
+                                       id="buscarUMDNS"
+                                       name="buscarUMDNS" type="text" value="">
+
+
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Estado</label>
+                                @Html.EnumDropDownListFor(model => model.EstadoEquipo, "Todos", htmlAttributes: new { @class = "form-control" })
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Tipo de Equipo</label>
+                                @Html.EnumDropDownListFor(model => model.SearchTipoEquipo, "Todos", htmlAttributes: new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.UbicacionId, "Ubicación", htmlAttributes: new { @class = "control-label" })
+                                @Html.DropDownList("UbicacionId", null, "Todas", htmlAttributes: new { @class = "form-control" })
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.SectorId, "Sector", htmlAttributes: new { @class = "control-label" })
+                                @Html.DropDownList("SectorId", null, "Todas", htmlAttributes: new { @class = "form-control" })
+                            </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.NumeroMatricula, htmlAttributes: new { @class = "control-label" })
+                                @Html.EditorFor(model => model.NumeroMatricula, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="form-group">
+                                <input id="buscarEquipo" type="submit" value="Buscar" class="btn btn-primary" />
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div id="searchEquipoResults">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
