--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -43,16 +43,17 @@
                                 <a href="@Url.Action("Index", "Home")"><i class="fa fa-home fa-fw"></i> Inicio</a>
                             </li>
                             <li>
-                                <!--
-                                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Indicadores<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>@Html.ActionLink("Tiempo Medio de Reparación", "TiempoMedioReparacion", "Indicadores")</li>
-                                </ul>
-                                -->
                                 <a href="@Url.Action("Index", "Indicadores")"><i class="fa fa-bar-chart-o fa-fw"></i> Indicadores</a>
                             </li>
                             <li>
                                 <a href="@Url.Action("Index", "EquiposBase")"><i class="fa fa-medkit fa-fw"></i> Equipos</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-file-text fa-fw"></i> Ordenes de Trabajo<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>@Html.ActionLink("Mantenimientos Correctivos", "Index", "ODTMantenimientoCorrectivo")</li>
+                                    <li>@Html.ActionLink("Mantenimientos Preventivos", "Index", "ODTMantenimientoPreventivo")</li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="#"><i class="fa fa-gears fa-fw"></i> Repuestos<span class="fa arrow"></span></a>
@@ -75,7 +76,6 @@
                                 <li>
                                     <a href="#"><i class="fa fa-gear fa-fw"></i> Administración<span class="fa arrow"></span></a>
                                     <ul class="nav nav-second-level">
-                                        <li>@Html.ActionLink("Traslados", "Index", "Traslados")</li>
                                         <li>@Html.ActionLink("Checklists MP", "Index", "ChecklistsMantenimientoPreventivo")</li>
                                         <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
                                         <li>@Html.ActionLink("Fabricantes", "Index", "Fabricantes")</li>
