--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EquiposTecnicosSN.Web.Models.HomeViewModel
 @{
-    ViewBag.Title = "Inicio";
+    ViewBag.Title = "Bienvenido";
 }
 
 <div class="row">
@@ -36,13 +36,13 @@
                     </div>
                     <div class="col-xs-9 text-right">
                         <div id="ODTMantenimientoPreventivoCount" class="big">@Html.DisplayFor(model => model.CorrectivosCount)</div>
-                        <div>Mantenimientos Correctivos</div>
+                        <div>Emergencias</div>
                     </div>
                 </div>
             </div>
             <a href="@Url.Action("Index", "ODTMantenimientoCorrectivo")">
                 <div class="panel-footer">
-                    <span class="pull-left">Ver Urgentes</span>
+                    <span class="pull-left">Ver M. Correctivos</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
