--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Index.cshtml
@@ -1,102 +1,19 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model IEnumerable<OrdenDeTrabajoMantenimientoCorrectivo>
+@model EquiposTecnicosSN.Web.Models.MCIndexViewModel
 
 @{
     ViewBag.Title = "Ordenes de trabajo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> Listado de Ordenes de trabajo Urgentes</div>
-            <div class="panel-body">
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <table class="table table-hover table-responsive table-condensed">
-                            <tr>
-                                <th>
-                                    Nº de Referencia
-                                </th>
-                                <th>
-                                    Estado
-                                </th>
-                                <th>
-                                    Fecha de Inicio
-                                </th>
-                                <th>
-                                    Descripci&oacute;n
-                                </th>
-                                <th></th>
-                            </tr>
+<!-- BUSCAR -->
+@Html.Partial("_SearchODTsMC", Model.Search)
 
-                            @foreach (var item in Model)
-                            {
+<!-- EMERGENCIAS -->
+@Html.Partial("_ListODTsMC", Model.Emergencias)
 
-                                string cssClass;
+<!-- URGENCIAS -->
+@Html.Partial("_ListODTsMC", Model.Urgencias)
 
-                                if (item.Estado != OrdenDeTrabajoEstado.Cerrada)
-                                {
-                                    switch (item.Prioridad)
-                                    {
-                                        case OrdenDeTrabajoPrioridad.Emergencia:
-                                            cssClass = "danger";
-                                            break;
-
-                                        case OrdenDeTrabajoPrioridad.Urgencia:
-                                            cssClass = "warning";
-                                            break;
-
-                                        case OrdenDeTrabajoPrioridad.Normal:
-                                            cssClass = "success";
-                                            break;
-
-                                        default:
-                                            cssClass = "info";
-                                            break;
-                                    }
-                                }
-                                else
-                                {
-                                    cssClass = "info";
-                                }
-                                <tr class="@cssClass">
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.NumeroReferencia)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Estado)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.FechaInicio)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Descripcion)
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Edit", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
-                                           title="Editar Orden de trabajo">
-                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                        </a>
-
-                                        <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Details", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
-                                           title="Ver Orden de trabajo">
-                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                        </a>
-                                        <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Delete", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
-                                           title="Eliminar Orden de trabajo">
-                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!-- NORMALES -->
+@Html.Partial("_ListODTsMC", Model.Normales)
