--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Index.cshtml
@@ -1,96 +1,11 @@
-﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model IEnumerable<OrdenDeTrabajoMantenimientoPreventivo>
+﻿@model EquiposTecnicosSN.Web.Models.MPIndexViewModel
 
 @{
     ViewBag.Title = "Ordenes de trabajo para Mantenimiento Preventivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Pr&oacute;ximos</div>
-            <div class="panel-body">
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <table class="table table-hover table-responsive table-condensed">
-                            <tr>
-                                <th>
-                                    Nº de Referencia
-                                </th>
-                                <th>
-                                    Estado
-                                </th>
-                                <th>
-                                    Fecha de Inicio
-                                </th>
-                                <th></th>
-                            </tr>
+@Html.Partial("_SearchODTsMP", Model.Search)
 
-                            @foreach (var item in Model)
-                            {
-
-                                string cssClass;
-
-                                if (item.Estado != OrdenDeTrabajoEstado.Cerrada)
-                                {
-                                    switch (item.Prioridad)
-                                    {
-                                        case OrdenDeTrabajoPrioridad.Emergencia:
-                                            cssClass = "danger";
-                                            break;
-
-                                        case OrdenDeTrabajoPrioridad.Urgencia:
-                                            cssClass = "warning";
-                                            break;
-
-                                        case OrdenDeTrabajoPrioridad.Normal:
-                                            cssClass = "success";
-                                            break;
-
-                                        default:
-                                            cssClass = "info";
-                                            break;
-                                    }
-                                }
-                                else
-                                {
-                                    cssClass = "info";
-                                }
-                                <tr class="@cssClass">
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.NumeroReferencia)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Estado)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.FechaInicio)
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Edit", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
-                                           title="Editar Orden de trabajo">
-                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                        </a>
-
-                                        <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Details", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
-                                           title="Ver Orden de trabajo">
-                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                        </a>
-                                        <a class="btn btn-default btn-xs btn-list"
-                                           href="@Url.Action("Delete", "ODTMantenimientoPreventivo", new { id = item.OrdenDeTrabajoId }, null)"
-                                           title="Eliminar Orden de trabajo">
-                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!-- PROXIMOS -->
+@Html.Partial("_ListODTsMP", Model.Proximas)
