--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EquiposTecnicosSN.Web.Models.SearchEquipoViewModel
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar equipo</div>
 
             <div class="panel-body">
