--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchEquiposResults.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchEquiposResults.cshtml
@@ -27,7 +27,14 @@
         </tr>
     </thead>
     <tbody>
-
+        @if (Model.Count() == 0)
+        {
+            <tr>
+                <td colspan="6" style="text-align: center">
+                    No se encontraron resultados.
+                </td>
+            </tr>
+        }
         @foreach (var item in Model)
         {
             <tr>
@@ -53,7 +60,7 @@
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     </a>
                     <a class="btn btn-default btn-xs btn-list"
-                       href="@Url.Action("Details", item.WebController(), new { id = item.EquipoId })"
+                       href="@Url.Action("Details", "EquiposBase", new { id = item.EquipoId })"
                        title="Ver Equipo">
                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                     </a>
