--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsResults.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsResults.cshtml
@@ -20,6 +20,14 @@
         </tr>
     </thead>
     <tbody>
+        @if (Model.Count() == 0)
+        {
+            <tr>
+                <td colspan="4" style="text-align: center">
+                    No se encontraron resultados.
+                </td>
+            </tr>
+        }
 
         @foreach (var item in Model)
         {
