--- a/EquiposTecnicosSN.Web/Views/EquipamientosEdilicios/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquipamientosEdilicios/Create.cshtml
@@ -15,7 +15,7 @@
             @Html.EditorFor(model => model.InformacionComercial)
         </div>
     </div>
-    
-    <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+
+    <a href="@Url.Action("Index", "EquiposBase")" class="btn btn-default"> Volver</a>
     <input type="submit" value="Guardar" class="btn btn-primary" />
 }
