--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Index.cshtml
@@ -8,4 +8,13 @@
 @Html.Partial("_SearchODTsMP", Model.Search)
 
 <!-- PROXIMOS -->
+@{
+    ViewBag.SubTitle = "Mantenimientos Preventivos Próximos";
+}
 @Html.Partial("_ListODTsMP", Model.Proximas)
+
+<!-- ABIERTOS -->
+@{
+    ViewBag.SubTitle = "Mantenimientos Preventivos Abiertos";
+}
+@Html.Partial("_ListODTsMP", Model.Abiertas)
