--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -12,14 +12,14 @@
                         <i class="fa fa-medkit fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="EquiposUsuarioCount" class="big">@Html.DisplayFor(model => model.EquiposFuncionalesCount)</div>
-                        <div>Equipos</div>
+                        <div class="big">@Html.DisplayFor(model => model.EquiposFuncionalesCount)</div>
+                        <div>Funcionales</div>
                     </div>
                 </div>
             </div>
             <a href="@Url.Action("Index", "EquiposBase")">
                 <div class="panel-footer">
-                    <span class="pull-left">Ver Todos</span>
+                    <span class="pull-left">Equipos</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
@@ -35,14 +35,14 @@
                         <i class="fa fa-wrench fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="ODTMantenimientoPreventivoCount" class="big">@Html.DisplayFor(model => model.CorrectivosCount)</div>
+                        <div class="big">@Html.DisplayFor(model => model.CorrectivosCount)</div>
                         <div>Emergencias</div>
                     </div>
                 </div>
             </div>
             <a href="@Url.Action("Index", "ODTMantenimientoCorrectivo")">
                 <div class="panel-footer">
-                    <span class="pull-left">Ver M. Correctivos</span>
+                    <span class="pull-left"> Mant. Correctivos</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
@@ -58,14 +58,14 @@
                         <i class="fa fa-calendar fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="ODTMantenimientoPreventivoCount" class="big">@Html.DisplayFor(model => model.PreventivosCount)</div>
-                        <div>Mantenimientos Preventivos</div>
+                        <div class="big">@Html.DisplayFor(model => model.PreventivosCount)</div>
+                        <div>Pr&oacute;ximos</div>
                     </div>
                 </div>
             </div>
             <a href="@Url.Action("Index", "ODTMantenimientoPreventivo")">
                 <div class="panel-footer">
-                    <span class="pull-left">Ver Próximas</span>
+                    <span class="pull-left">Mant. Preventivos</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                     <div class="clearfix"></div>
                 </div>
@@ -82,7 +82,7 @@
                         <i class="fa fa-gears fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div id="StockRepuestosCount" class="big">@Html.DisplayFor(model => model.RepuestosCount)</div>
+                        <div class="big">@Html.DisplayFor(model => model.RepuestosCount)</div>
                         <div>Repuestos</div>
                     </div>
                 </div>
@@ -95,13 +95,12 @@
                 </div>
             </a>
         </div>
-
     </div>
-
 </div>
+<hr />
 <!-- BUSCAR EQUIPO -->
 @Html.Partial("_SearchEquipos", Model.searchEquipo)
-
+<hr />
 <!-- BUSCAR ODT -->
 @Html.Partial("_SearchODTs", Model.searchOdt)
 
