--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionHardware.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionHardware.cshtml
@@ -31,7 +31,7 @@
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(model => model.NumeroSerie, htmlAttributes: new { @class = "control-label" })
-                            @Html.EditorFor(model => model.NumeroSerie, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.NumeroSerie, new { htmlAttributes = new { @class = "form-control", data_val_required = "El campo Nº de Serie es requerido." } })
                             @Html.ValidationMessageFor(model => model.NumeroSerie, "", new { @class = "text-danger" })
                         </div>
                     </div>
