--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -102,19 +102,13 @@
                     <h3 class="page-header">@ViewBag.Title</h3>
                 </div>
             </div>
-            @if (ViewBag.Message != null)
-            {
-                <div class="alert alert-@ViewBag.CssClass alert-dismissable">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                    @ViewBag.Message
-                </div>
-            }
             @RenderBody()
         </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/lib/bower_components")
     @Scripts.Render("~/bundles/datepicker")
