--- a/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
@@ -26,6 +26,14 @@
                                 </th>
                                 <th></th>
                             </tr>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td colspan="5" style="text-align: center">
+                                        No se encontraron resultados.
+                                    </td>
+                                </tr>
+                            }
 
                             @foreach (var item in Model)
                             {
