--- a/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMP.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMP.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Pr&oacute;ximos</div>
+            <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> @ViewBag.SubTitle</div>
             <div class="panel-body">
 
                 <div class="row">
@@ -23,6 +23,14 @@
                                 </th>
                                 <th></th>
                             </tr>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td colspan="4" style="text-align: center">
+                                        No se encontraron resultados.
+                                    </td>
+                                </tr>
+                            }
 
                             @foreach (var item in Model)
                             {
