--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchEquipos.cshtml
@@ -5,7 +5,7 @@
             <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar equipo</div>
 
             <div class="panel-body">
-                <form id="FormBuscarEquipo" method="get" data-nqn-ajax="true" action="@Url.Action("SearchEquipos", "EquiposBase")" data-nqn-target="#searchEquipoResults">
+                <form id="formBuscarEquipo" method="get" data-nqn-ajax="true" action="@Url.Action("SearchEquipos", "EquiposBase")" data-nqn-target="#searchEquipoResults">
 
                     <div class="row">
                         <div class="col-md-6">
