--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTs.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTs.cshtml
@@ -1,11 +1,11 @@
 ﻿@model EquiposTecnicosSN.Web.Models.SearchOdtViewModel
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo</div>
 
             <div class="panel-body">
-                <form id="FormBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "ODTMantenimientoPreventivo")" data-nqn-target="#searchODTResults">
+                <form id="formBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "ODTMantenimientoPreventivo")" data-nqn-target="#searchODTResults">
 
                     <div class="row">
                         <div class="col-md-6">
