--- a/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> Ordenes de trabajo de prioridad: @Model.First().Prioridad.DisplayName()</div>
+            <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> Ordenes de trabajo de prioridad: @ViewBag.SubTitle</div>
             <div class="panel-body">
 
                 <div class="row">
