--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
@@ -1,4 +1,5 @@
-﻿@model EquiposTecnicosSN.Entities.Equipos.Equipo
+﻿@using EquiposTecnicosSN.Web.CustomExtensions
+@model EquiposTecnicosSN.Entities.Equipos.Equipo
 
 <div class="row">
     <div class="col-lg-12">
@@ -64,7 +65,7 @@
                                 @Html.DisplayNameFor(model => model.Estado)
                             </label>
                             <p class="form-control-static">
-                                @Html.ValueFor(model => model.Estado)
+                                @Model.Estado.DisplayName()
                             </p>
                         </div>
                     </div>
