--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/OrdenDeTrabajoMantenimientoPreventivo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/OrdenDeTrabajoMantenimientoPreventivo.cshtml
@@ -90,6 +90,7 @@
                                 </div>
                             </div>
                         </div>
+                        
 
                     </div>
                 </div>
@@ -103,6 +104,12 @@
                             <div class="form-group">
                                 <label class="control-label switch-label">Checklist Completo</label>
                                 @Html.EditorFor(model => model.ChecklistCompleto, new { @class = "form-control" })
+                            </div>
+                            <div class="form-group">
+                                <label>Archivo Checklist Final</label>
+                                <p class="form-control-static">
+                                    @Html.ActionLink("Descargar", "DownloadChecklistCompleto", "ODTMantenimientoPreventivo", new { odtId = Model.OrdenDeTrabajoId }, null)
+                                </p>
                             </div>
                         </div>
                     </div>
