--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
@@ -29,7 +29,7 @@
                            data-umdns-autocomplete-codigo="@Url.Action("AutocompleteCodigoUMDNS")"
                            data-val="true"
                            data-val-maxlength="El campo UMDNS Completo debe tener como máximo '50'."
-                           data-val-maxlength-max="255" 
+                           data-val-maxlength-max="255"
                            data-val-required="El campo UMDNS es requerido."
                            id="UMDNS"
                            name="UMDNS" type="text" value="@Model.UMDNS">
@@ -38,8 +38,7 @@
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label" })
-                    @Html.EnumDropDownListFor(model => model.Estado, null, new { @class = "form-control", data_val_required = "El campo Estado es requerido." })
-                    @*Html.EnumDropDownListFor(model => model.Estado, null, htmlAttributes: new { @class = "form-control", data_val_required = "El campo Estado es requerido." })*@
+                    @Html.EnumDropDownListFor(model => model.Estado, "Seleccione", new { @class = "form-control", data_val_range_min = 1, data_val_range = "El campo Estado es requerido." })
                     @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
                 </div>
 
@@ -47,12 +46,12 @@
             <div class="col-md-6">
                 <div class="form-group">
                     @Html.LabelFor(model => model.UbicacionId, "Ubicación", htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownList("UbicacionId", null, "Seleccione", htmlAttributes: new { @class = "form-control", data_val_required = "El campo Ubicación es requerido." })
+                    @Html.DropDownList("UbicacionId", null, "Seleccione", htmlAttributes: new { @class = "form-control", data_val = "true", data_val_required = "El campo Ubicación es requerido.", data_val_range_min = 1, data_val_range = "El campo Ubicación es requerido." })
                     @Html.ValidationMessageFor(model => model.UbicacionId, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.SectorId, "Sector", htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownList("SectorId", null, "Seleccione", htmlAttributes: new { @class = "form-control", data_val_required = "El campo Sector es requerido." })
+                    @Html.DropDownList("SectorId", null, "Seleccione", htmlAttributes: new { @class = "form-control", data_val = "true", data_val_required = "El campo Sector es requerido.", data_val_range_min = 1, data_val_range = "El campo Sector es requerido." })
                     @Html.ValidationMessageFor(model => model.SectorId, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
