--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -36,14 +36,14 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.ValorRestante, htmlAttributes: new { @class = "control-label" })
-                            <div class="input-group">
-                                <span class="input-group-addon">$</span>
-                                @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control" } })
-                            </div>
-                            @Html.ValidationMessageFor(model => model.ValorRestante, "", new { @class = "text-danger" })
-                        </div>
+                        <!--<div class="form-group">-->
+                            @*Html.LabelFor(model => model.ValorRestante, htmlAttributes: new { @class = "control-label" })*@
+                            <!--<div class="input-group">
+                                <span class="input-group-addon">$</span>-->
+                                @*Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control" } })*@
+                            <!--</div>-->
+                            @*Html.ValidationMessageFor(model => model.ValorRestante, "", new { @class = "text-danger" })*@
+                        <!--</div>-->
                         <div class="form-group">
                             @Html.LabelFor(model => model.EsGrantiaContrato, htmlAttributes: new { @class = "control-label" })
                             @Html.EnumDropDownListFor(model => model.EsGrantiaContrato, "Ninguna", htmlAttributes: new { @class = "form-control" })
