--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTs.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTs.cshtml
@@ -28,6 +28,10 @@
                                 <label class="control-label">Estado</label>
                                 @Html.EnumDropDownListFor(model => model.EstadoODT, "Todos", htmlAttributes: new { @class = "form-control" })
                             </div>
+                            <div class="form-group">
+                                <label class="control-label">Fecha de Inicio Desde</label>
+                                @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control date-picker" } })
+                            </div>
                         </div>
                     </div>
                     <div class="row">
