--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMC.cshtml
@@ -12,13 +12,14 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="control-label">Nº Referencia</label>
-
                                 <input class="form-control text-box single-line"
                                        id="buscarNumeroReferencia"
                                        name="buscarNumeroReferencia" type="text" value="">
-
                             </div>
-
+                            <div class="form-group">
+                                <label class="control-label">Fecha de Inicio Desde</label>
+                                @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control date-picker" } })
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
